@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.2184 2004/09/30 22:59:47 xtraeme Exp $
+$NetBSD: TODO,v 1.2185 2004/10/01 00:09:17 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -239,7 +239,6 @@ Suggested package updates
 	o dmalloc-5.3.0
 	o docbook-4.3
 	o docsis-0.9.1
-	o dosbox-0.62
 	o dovecot-0.99.11
 	o drscheme-208
 	o dvipng-1.2 [http://sourceforge.net/projects/dvipng/]
