@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2004/06/13 12:37:47 grant Exp $
+# $NetBSD: Makefile,v 1.8 2004/10/01 00:09:17 xtraeme Exp $
 #
 
-DISTNAME=	dosbox-0.61
+DISTNAME=	dosbox-0.62
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=dosbox/}
 
@@ -22,6 +22,7 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/dosbox
 	${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/doc/dosbox
 
+.include "../../audio/SDL_sound/buildlink3.mk"
 .include "../../devel/SDL/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../net/SDL_net/buildlink3.mk"
